*jekyll-1.4.3 (18 Jan 2014)

  18 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.3.ebuild:
  [www-apps/jekyll] Version bump.

*jekyll-1.4.2 (17 Dec 2013)

  17 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.2.ebuild,
  -jekyll-1.4.1.ebuild:
  Version bump.

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -jekyll-1.2.1.ebuild:
  Remove old.

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> jekyll-1.4.1.ebuild:
  Add more versioning.

*jekyll-1.4.1 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.1.ebuild,
  jekyll-0.11.2.ebuild:
  Version bump.

  20 Sep 2013; Manuel Rüger <mrueg@gentoo.org> jekyll-1.2.1.ebuild:
  Fix install.

*jekyll-1.2.0 (07 Sep 2013)

  07 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.2.0.ebuild,
  -jekyll-1.1.2.ebuild:
  Version bump.

*jekyll-0.11.2 (26 Aug 2012)

  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +jekyll-0.11.2.ebuild,
  +metadata.xml:
  www-apps/jekyll: Initial ebuild