@@ -1,4 +1,2 @@
 DIST jekyll-0.11.2.gem 53248 SHA256 99eca98958b700c8956eca7396addce926e05e989d3ea9230fff76653ca1baae SHA512 67e0391e043ac5e825835a09e3099c90460d133979036d7ad9d9017befda935a42015e7e42566fbd9092beef3da5f5a0fb63dbe3d59962bd4cc240445b5f123d WHIRLPOOL 44f5ab25b627476e39d1a1ffb55a21ba2553b80c7ddb066c5b4cadd46d39cbed36202100efb0a131f04ad86ab77372a88909669db2cba1b8fa3650f385e6c131
-DIST jekyll-1.3.1.gem 262144 SHA256 d056dc534baf3b865fc98552e038cf841c00571a4604d6bf417650616d8dc886 SHA512 c1a8437cc9cb1b6739a4532531014ad812bda3a7e3b015f82d8d927c3d7f92814a3421541f6899d10b794ad95a09d282cd6ecb138121bef9b5532b5d023005ad WHIRLPOOL 41688199469b92e3a57ba3bc15714c01fa6e7adfc523b8e2de8ebd2f198fd3f391574d3a0d60ef073f09cb1035a5cda0378d5a932de9be8174cef212e87fb009
-DIST jekyll-1.4.2.gem 263680 SHA256 e936d21e489f6b4f382d2ffc16562701c4317c7b1f6626b3f97ab7c84c67b160 SHA512 284c9c8c3a2bcd19ed06f5283e752774b4288066df87671e7bcc5e83f564da89344ae6d695910c0cbda25f8207c3d350da9290184c961b58e4d5284d277e57a1 WHIRLPOOL 0a64987a7030ed6b784d881a4fb2593a758ef6038b0d09ab5ae5309367924115bc3d86f3134ca2f0bc73ccf156439b882004746ebb6b5df7ea3b9bdd00016806
 DIST jekyll-1.4.3.gem 264704 SHA256 d7972c879ed14fbcc45882385bbf9ca7885ded60ac2cf33308864adce051dfb3 SHA512 7acfdbd7f59b12e9c118085652889a3ed3ac4d0e64c4fc9efb030ccda4829c46b5714e5d271526cd9709a9245924f2d486a31cf564227e9237efcc1f1e6a08b9 WHIRLPOOL 28eec04f28b130daab8292773e3c18148ca53cff5a1b97bd64a6948235e3ebd8571ff3aec9b410419f3d2c9a11b5de9e60dcd9df4d1a640aaecc099a30650354
