@@ -1,3 +1,7 @@
+  21 Jan 2014; Manuel Rüger <mrueg@gentoo.org> -jekyll-1.3.1.ebuild,
+  -jekyll-1.4.2.ebuild:
+  [www-apps/jekyll] Remove old.
+
 *jekyll-1.4.3 (18 Jan 2014)
 
   18 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.3.ebuild:
